Fixed backface visibility for Safari

--- a/styles.css
+++ b/styles.css
@@ -61,6 +61,7 @@ body {
     width: 100%;
     height: 100%;
     backface-visibility: hidden;
+    -webkit-backface-visibility: hidden;
     font-size: 25px;
 }
 
@@ -101,7 +102,7 @@ body {
 }
 
 .card-back {
-    background-size: 100% 100%;
+    background-size: 100%;
     background-repeat: no-repeat;
     color: white;
     transform: rotateY(180deg);
@@ -124,28 +125,28 @@ body {
 }
 
 @keyframes fadeTextOut {
-    from {
+    0% {
         opacity: 0;
     }
-    to {
+    100% {
         opacity: 1;
     }
 }
 
 @keyframes moveRowToRight {
-    from {
+    0% {
         left: 0px;
     }
-    to {
+    100% {
         left: 1500px;
     }
 }
 
 @keyframes moveRowToLeft {
-    from {
+    0% {
         left: -1500px;
     }
-    to {
+    100% {
         left: 0px;
     }
 }
@@ -184,8 +185,13 @@ body {
 }
 
 @keyframes marquee {
-  0% { transform: translate3d(0, 0, 0); }
-  100% { transform: translate3d(-200vw, 0, 0); }
+  0% { 
+    transform: translate3d(0, 0, 0); 
+  }
+  
+  100% { 
+    transform: translate3d(-200vw, 0, 0); 
+  }
 }
 
 @media only screen and (min-device-width: 600px){
